fixed getting todos considering email; fixed иug with automatic calendar shift; refactoring;

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -13,7 +13,7 @@ li {
   display: inline-flex;
 
   .today {
-    background-color: orange;
+    background-color: #00b2ff;
     color: white;
   }
 
